; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_get_profiles.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_video_encoder_get_profiles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hb_h264_profile_names_8bit = common dso_local global i8** null, align 8
@hb_h264_profile_names_10bit = common dso_local global i8** null, align 8
@hb_h265_profile_names_8bit = common dso_local global i8** null, align 8
@hb_h265_profile_names_10bit = common dso_local global i8** null, align 8
@hb_h265_profile_names_12bit = common dso_local global i8** null, align 8
@hb_h265_profile_names_16bit = common dso_local global i8** null, align 8
@HB_VCODEC_QSV_MASK = common dso_local global i32 0, align 4
@hb_vce_h264_profile_names = common dso_local global i8** null, align 8
@hb_vce_h265_profile_names = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @hb_video_encoder_get_profiles(i32 %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %20 [
    i32 132, label %5
    i32 133, label %7
    i32 128, label %9
    i32 131, label %11
    i32 130, label %13
    i32 129, label %15
    i32 139, label %17
    i32 138, label %17
    i32 135, label %17
    i32 134, label %17
  ]

5:                                                ; preds = %1
  %6 = load i8**, i8*** @hb_h264_profile_names_8bit, align 8
  store i8** %6, i8*** %2, align 8
  br label %21

7:                                                ; preds = %1
  %8 = load i8**, i8*** @hb_h264_profile_names_10bit, align 8
  store i8** %8, i8*** %2, align 8
  br label %21

9:                                                ; preds = %1
  %10 = load i8**, i8*** @hb_h265_profile_names_8bit, align 8
  store i8** %10, i8*** %2, align 8
  br label %21

11:                                               ; preds = %1
  %12 = load i8**, i8*** @hb_h265_profile_names_10bit, align 8
  store i8** %12, i8*** %2, align 8
  br label %21

13:                                               ; preds = %1
  %14 = load i8**, i8*** @hb_h265_profile_names_12bit, align 8
  store i8** %14, i8*** %2, align 8
  br label %21

15:                                               ; preds = %1
  %16 = load i8**, i8*** @hb_h265_profile_names_16bit, align 8
  store i8** %16, i8*** %2, align 8
  br label %21

17:                                               ; preds = %1, %1, %1, %1
  %18 = load i32, i32* %3, align 4
  %19 = call i8** @hb_av_profile_get_names(i32 %18)
  store i8** %19, i8*** %2, align 8
  br label %21

20:                                               ; preds = %1
  store i8** null, i8*** %2, align 8
  br label %21

21:                                               ; preds = %20, %17, %15, %13, %11, %9, %7, %5
  %22 = load i8**, i8*** %2, align 8
  ret i8** %22
}

declare dso_local i8** @hb_av_profile_get_names(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
